Add Sidebar File and Fonts

--- a/input.css
+++ b/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Axiforma';
+    src: url(./assets/fonts/Kastelov\ \ Axiforma\ Regular.otf);
+}
