--- a/style.css
+++ b/style.css
@@ -626,11 +626,6 @@ video {
   grid-column-start: 9;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .-ms-1 {
   margin-inline-start: -0.25rem;
 }
@@ -675,24 +670,12 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mt-7 {
   margin-top: 1.75rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -1055,10 +1038,6 @@ video {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
 .font-poppins {
   font-family: "Poppins", sans-serif;
 }
@@ -1250,6 +1229,11 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1263,6 +1247,11 @@ video {
 .hover\:bg-yellow-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(161 98 7 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -1353,6 +1342,11 @@ video {
     background-color: rgb(37 99 235 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-frog {
+    --tw-bg-opacity: 1;
+    background-color: rgb(23 135 109 / var(--tw-bg-opacity));
+  }
+
   .dark\:bg-gray-600 {
     --tw-bg-opacity: 1;
     background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -1371,11 +1365,6 @@ video {
   .dark\:bg-mountain {
     --tw-bg-opacity: 1;
     background-color: rgb(44 194 149 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-frog {
-    --tw-bg-opacity: 1;
-    background-color: rgb(23 135 109 / var(--tw-bg-opacity));
   }
 
   .dark\:text-gray-400 {
